# git-commit-ai

./: Cargo.toml  dodo  makefile  readme.md
src/: commands.rs  cursor.rs  gpt_api.rs  main.rs
