[package]
name = "ai-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.*", features = ["blocking", "json"] } # replace "0.11" with your version
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
clap = "2"
colored = "2.0"
crossterm = "0.22"
